Fixed dark mode and adjusted card size

--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,5 @@
   .active {
     @apply bg-neutral-200 dark:bg-neutral-700;
   }
-  .ce-block__content {
-    @apply lg:min-w-[95%] mx-4;
-  }
+
 }
